<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom">
        
        <menu>
            <item
                android:id="@+id/action_sort_name_asc"
                android:title="@string/sort_by_name_asc" />
                
            <item
                android:id="@+id/action_sort_name_desc"
                android:title="@string/sort_by_name_desc" />
                
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/sort_by_date" />
                
            <item
                android:id="@+id/action_sort_number"
                android:title="@string/sort_by_number" />
        </menu>
    </item>
</menu>
